[gd_scene load_steps=4 format=3 uid="uid://mfkweep0uqko"]

[ext_resource type="Texture2D" uid="uid://c3m08r0k0ai8n" path="res://Textures/Locations/CabineCapitaine/cabine.png" id="1_xuq5i"]
[ext_resource type="Script" path="res://Scripts/door.gd" id="2_y2d5c"]
[ext_resource type="Script" path="res://Scripts/item.gd" id="3_8qo3i"]

[node name="CaptainCabin" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_xuq5i")
expand_mode = 5

[node name="Door_To_Deck" type="Area2D" parent="CanvasLayer"]
script = ExtResource("2_y2d5c")
destination = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CanvasLayer/Door_To_Deck"]
polygon = PackedVector2Array(256, 656, 939, 532, 1191, 660)

[node name="Coffre" type="Area2D" parent="CanvasLayer"]
script = ExtResource("3_8qo3i")
timeline = "coffre"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CanvasLayer/Coffre"]
position = Vector2(617, 172)
polygon = PackedVector2Array(330, 204, 316, 221, 314, 241, 283, 253, 285, 302, 415, 374, 432, 360, 431, 284, 490, 264)

[node name="Tableau" type="Area2D" parent="CanvasLayer"]
script = ExtResource("3_8qo3i")
timeline = "tableau"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CanvasLayer/Tableau"]
polygon = PackedVector2Array(54, 63, 89, 54, 96, 58, 127, 151, 63, 159)

[node name="Carnet" type="Area2D" parent="CanvasLayer"]
script = ExtResource("3_8qo3i")
timeline = "journal_intime"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CanvasLayer/Carnet"]
polygon = PackedVector2Array(147, 383, 162, 446, 231, 438, 194, 373)

[connection signal="input_event" from="CanvasLayer/Door_To_Deck" to="CanvasLayer/Door_To_Deck" method="_on_input_event"]
[connection signal="mouse_entered" from="CanvasLayer/Door_To_Deck" to="CanvasLayer/Door_To_Deck" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Door_To_Deck" to="CanvasLayer/Door_To_Deck" method="_on_mouse_exited"]
[connection signal="input_event" from="CanvasLayer/Coffre" to="CanvasLayer/Coffre" method="_on_input_event"]
[connection signal="mouse_entered" from="CanvasLayer/Coffre" to="CanvasLayer/Coffre" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Coffre" to="CanvasLayer/Coffre" method="_on_mouse_exited"]
[connection signal="input_event" from="CanvasLayer/Tableau" to="CanvasLayer/Tableau" method="_on_input_event"]
[connection signal="mouse_entered" from="CanvasLayer/Tableau" to="CanvasLayer/Tableau" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Tableau" to="CanvasLayer/Tableau" method="_on_mouse_exited"]
[connection signal="input_event" from="CanvasLayer/Carnet" to="CanvasLayer/Carnet" method="_on_input_event"]
[connection signal="mouse_entered" from="CanvasLayer/Carnet" to="CanvasLayer/Carnet" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Carnet" to="CanvasLayer/Carnet" method="_on_mouse_exited"]
